# android_opt

./: README.md
MyApplication/app/: Android.mk  Application.mk  CMakeLists.txt  build.gradle
MyApplication/app/src/androidTest/java/com/example/frank/myapplication/: MainActivityTest.java
MyApplication/app/src/main/: AndroidManifest.xml
MyApplication/app/src/main/cpp/: cpu.cpp  native-lib.cpp
MyApplication/app/src/main/include/: cpu_tune.h
MyApplication/app/src/main/include/eigen-3.3.4/Eigen/src/Core/products/: GeneralMatrixMatrix.h
MyApplication/app/src/main/include/qspower/: config.h  power.h  power.hh
MyApplication/app/src/main/include/qspower/internal/util/: analytics.hh
MyApplication/app/src/main/java/com/example/frank/myapplication/: MainActivity.java
MyApplication/app/src/main/res/layout/: activity_main.xml  content_main.xml
MyApplication/gradle/wrapper/: gradle-wrapper.properties
